--- a/qr-code-component-main/qr-code-component-main/styles.css
+++ b/qr-code-component-main/qr-code-component-main/styles.css
@@ -5,6 +5,35 @@ body{
    font-family: "outfit", sans-serif; 
    font-size: 15px;
    align-items: center;
+   text-align: center;
+   background-color: hsl(212, 45%, 89%);
+
+   color: hsl(218, 44%, 22%);
+}
+
+.container{
+
+    background-color: white;
+    
+    
+    
+    margin: auto;
+    width: 15em;
+    margin-top: 50%;
+    margin-bottom: 50%;
+    border-radius: 10px;
+    padding: 1em;
+
+
+   
+}
+
+.qr-code img{
+    display: block;
+    margin: auto;
+    width: 100%;
+    border-radius: 10px;
+   
 }
 
 
@@ -12,22 +41,19 @@ body{
 
 @media(min-width:700px){
     
-
+/* Desktop Style*/
 .container{
     
     margin: auto;
     margin-top: 15%;
-    padding: 2em;
-    background-color: red;
-    width: 10em;
+    padding: 1em;
+    background-color: white;
+    width: 15em;
     border-radius: 10px;
    
-    
-}
 
-.qr-code img{
-    width: 30px;
-}
+
 
 }
 
+}
